    Jaffray, Dmitry Jemerov, Richard Jones, Andreas Jung, Garth Kidd,
    Nicola Larosa, Daniel Larsson, Marc-Andre Lemburg, Julien
    Letessier, Wolfgang Lipp, Edward Loper, Dallas Mahrt, Ken
    Manheimer, Vasko Miroslav, Skip Montanaro, Paul Moore, Nigel
    W. Moriarty, Mark Nodine, Patrick K. O'Brien, Michel Pelletier,
    Sam Penrose, Tim Peters, Pearu Peterson, Mark Pilgrim, Brett g
    Porter, Tavis Rudd, Oliver Rutherfurd, Kenichi Sato, Ueli
    Schlaepfer, Gunnar Schwant, Bruce Smith, tav, Bob Tolbert,
    Laurence Tratt, Guido van Rossum, Martin von Loewis, Greg Ward,
    Barry Warsaw, Edward Welbourne, Ka-Ping Yee, Moshe Zadka

Thank you!

(I'm still waiting for contributions of computer equipment and cold
hard cash :-).)  Hopefully I haven't forgotten anyone or misspelled
any names; apologies (and please let me know!) if I have.


Changes Since 0.2
========================

General:

* Renamed "attribute" to "option" for directives/extensions.

* Renamed transform method "transform" to "apply".

* Renamed "options" to "settings" for runtime settings (as set by
  command-line options).  Sometimes "option" (singular) became
  "settings" (plural).  Some variations below:

  - document.options -> document.settings (stored in other objects as
    well)
  - option_spec -> settings_spec (not directives though)
  - OptionSpec -> SettingsSpec
  - cmdline_options -> settings_spec
  - relative_path_options -> relative_path_settings
  - option_default_overrides -> settings_default_overrides
  - Publisher.set_options -> Publisher.get_settings

Specific:

* FAQ.txt: Frequently asked questions, added to project.

* docutils/__init__.py:

  - Bumped version to 0.2.1 to reflect changes to I/O classes.
  - Bumped version to 0.2.2 to reflect changes to stylesheet options.
  - Factored ``SettingsSpec`` out of ``Component``; separately useful.
  - Bumped version to 0.2.3 because of the new "--embed-stylesheet"
    option and its effect on the PEP template & writer.